fix: align contents layout with milkdown layout

--- a/html/css/markdown-contents.css
+++ b/html/css/markdown-contents.css
@@ -3,37 +3,30 @@
  * © 2021 Hidekazu Kubota
  */
  
- body > #card > #editor{
-  padding: 0px;
-  margin: 0px;
-  top: 18px;  
-  border: 0px;
-  visibility: hidden;
-  position: absolute;
-  z-index: 50;
-}
-
-body > #card > #editor > .milkdown{
- 	/* Font */
+body
+{
+	/* Font */
 	/* Emoji fonts are added to visualize them nicely in Internet Explorer. */
 	font-family:  'メイリオ', 'Meiryo', sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-size: 14px;
-
-  line-height: 1.2em;
 
 	/* Text color */
 	color: #000;
 
 	/* Remove the background color to make it transparent. */
 	background-color: transparent;
-  padding: 7px 7px 7px 7px;
-  margin: 0px;
+	margin: 3px 7px 3px 7px;
+  padding: 2px;
 
   word-wrap: break-word;
 }
 
-body > #card > #editor > .milkdown > .editor * {
-  margin: 0px;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
+/* Custom scroll bar */
+body::-webkit-scrollbar-thumb{
+  border-radius: 7px;
+}
+
+body > * {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
 }
